# adventure-agent

./: .env.template  .gitignore  CLAUDE.md  COMPLETION_CHECKLIST.md  README.md  check_config.py  check_openai_key.py  langgraph.json  main.py  pyproject.toml  run.sh
.cursor/rules/: 01-project-overview.mdc  02-code-style.mdc  03-agent-patterns.mdc  04-langgraph-patterns.mdc  (+8 more)
docs/: AGENT_RECOMMENDATIONS.md  API_DEPLOYMENT.md  API_INTEGRATIONS.md  API_KEY_SETUP.md  ARIZONA_AGENTS_COMPLETE.md  ARIZONA_FOCUS.md  ARIZONA_PIVOT_SUMMARY.md  BACKEND_ERRORS_FIXED.md  COMPLETION_SUMMARY.md  CRITICAL_FIXES_APPLIED.md  DATA_ARCHIVING.md  DEPLOYMENT.md  DYNAMIC_KNOWLEDGE_IMPLEMENTATION.md  ERROR_HANDLING_IMPROVEMENTS.md  FINAL_STATUS.md  HUMAN_IN_THE_LOOP.md  JEROME_AGENT_IMPROVEMENTS.md  KNOWLEDGE_SOURCE_MIGRATION.md  LANGCHAIN_BEST_PRACTICES_REVIEW.md  LANGGRAPH_BEST_PRACTICES_ANALYSIS.md  LINTER_SETUP.md  LOCATION_AGENTS_ANALYSIS.md  LOCATION_AGENTS_ARCHITECTURE.md  LOCATION_AGENTS_ENHANCEMENT_SUMMARY.md  LOCATION_AGENTS_ORGANIZATION.md  LOCATION_AGENTS_SUMMARY.md  LOCATION_KNOWLEDGE_ARCHITECTURE.md  MODEL_ASSIGNMENT_MIGRATION.md  MODEL_MIGRATION_SUMMARY.md  MODEL_RECOMMENDATIONS.md  NEW_LOCATION_AGENTS_SUMMARY.md  PER_AGENT_MODELS_SUMMARY.md  PER_AGENT_MODEL_ASSIGNMENT.md  READY_TO_TEST.md  REMAINING_IMPLEMENTATION.md  REMAINING_TASKS_COMPLETED.md  SOUTHERN_ARIZONA_RECOMMENDATIONS.md  TERMINOLOGY_UPDATE.md  TESTING_READINESS.md  TRAIL_DATA_SOURCES.md  (+3 more)
frontend/: README.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  vite.config.ts
knowledge/: README.md
(+106 files in other folders)
